<resources>
    <string name="app_name">ScanEye</string>
    <string name="older_text">Older</string>
    <string name="yesterday_text">Yesterday</string>
    <string name="today_text">Today</string>
    <string name="empty_history_text">ScanEye hasn\'t\ncaptured anything</string>
    <string name="history_heading">History</string>
    <string name="back_button_cd">Back Button</string>
    <string name="visited_at_text">Visited at: %1s</string>
    <string name="visited_at_text_with_line_br">Visited at\n %1s</string>
    <string name="qr_share_cd">QR Share</string>
    <string name="captured_image_view_cd">Captured Image View</string>
    <string name="history_button_cd">History Button</string>
    <string name="shutter_button_cd">Shutter Button</string>
    <string name="visit_text">Visit</string>
    <string name="copy_text">Copy</string>
    <string name="share_text">Share</string>
    <string name="scan_result_icon_cd">Scan Result Icon</string>
    <string name="website_heading">Website</string>
    <string name="wifi_heading">Wifi</string>

</resources>