<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="15dp"
    android:paddingTop="48dp"
    android:paddingEnd="15dp"
    android:paddingBottom="30dp"
    tools:context=".fragments.HistoryFragment">

    <ImageButton
        android:id="@+id/button_backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:background="@color/white"
        android:contentDescription="@string/back_button_cd"
        android:src="@drawable/ic_back"
        tools:ignore="RedundantDescriptionCheck,TouchTargetSizeCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/history_heading"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv_emptyHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/empty_history_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/layout_todayHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_backButton"
        android:layout_marginTop="48dp"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today_text"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:itemCount="2"
            tools:listitem="@layout/rv_items_history" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_yesterdayHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_todayHistory"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yesterday_text"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:itemCount="1"
            tools:listitem="@layout/rv_items_history" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_olderHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_yesterdayHistory"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/older_text"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:itemCount="1"
            tools:listitem="@layout/rv_items_history" />
    </LinearLayout>

</RelativeLayout>