<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <ImageView
        android:id="@+id/imgView_scanResultIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/bg_circular_buttons"
        android:contentDescription="@string/scan_result_icon_cd"
        android:padding="8dp" />

    <TextView
        android:id="@+id/tv_scanResultTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="30dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="30dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv_scanResultSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="30dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="30dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_scanResultbt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/visit_text"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_scanResultbt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copy_text"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_scanResultbt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_text"
            android:textAllCaps="false"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>